# stock-market-analytics

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
01-intro/: [2025]_Module_01_Colab_Introduction_and_Data_Sources.ipynb  hw-01.ipynb
02-dataframe-analysis/: [2025]_Module_02_Colab_Working_with_the_data.ipynb  googleapi_test.ipynb  hw-02.ipynb
03-modeling/: hw-03.ipynb
04-trading-stategy-simulation/: [2025]_Module_04_Colab_Trading_Simulations copy.ipynb  [2025]_Module_04_Colab_Trading_Simulations.ipynb  hw-04-q1.ipynb  hw-04-q2.ipynb  hw-04.ipynb  hw-q4-q3.ipynb
Other/google-api/: googleapi_test.ipynb
Other/ibkr/: ibkr-sample.ipynb  readme.md
