[project]
name = "stock-market-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eurostat>=1.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.1.0",
    "pyarrow>=20.0.0",
    "yfinance>=0.2.61",
]
